--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ h2{
 .personagem{
     display: flex;
     background-color: whitesmoke;
-    width: 300px;
+    width: 80%;
     height: auto;
     border-radius: 5px;
     box-shadow: 5px 5px 5px rgba(27, 27, 27, 0.788);
@@ -65,11 +65,11 @@ h2{
     justify-content: center;
     align-items: center;
     text-align: justify;
-    padding: 10px;
+    padding: 5%;
 }
 .personagem:hover{
     box-shadow: 10px 10px 10px;
-    height: 370px;
+    height: 95%;
 }
 .nome{
     padding: 5px;
